Fixes #13457: Remove static ids in Password section

--- a/rudder-web/src/main/webapp/templates-hidden/components/passwordInput.html
+++ b/rudder-web/src/main/webapp/templates-hidden/components/passwordInput.html
@@ -5,8 +5,8 @@
         <div ng-if="! current.isScript" class="form-group is-passwd">
             <label class="control-label" for="currentPassword-{{current.show ? 'clear': 'hidden'}}">Current password <small style="color: #999">- {{displayCurrentHash()}}</small></label>
             <div class="input-group col-xs-12">
-              <input type="text" ng-if="current.show" readonly="" placeholder="" id="currentPassword-clear" class="form-control toggle-type" ng-value="displayedPass"></input>
-              <input ng-hide="current.show" type="password" readonly="" class="form-control toggle-type animate-show" id="currentPassword-hidden" ng-model="displayedPass" placeholder=""/>
+              <input type="text" ng-if="current.show" readonly="" placeholder="" class="form-control toggle-type" ng-value="displayedPass"></input>
+              <input ng-hide="current.show" type="password" readonly="" class="form-control toggle-type animate-show" ng-model="displayedPass" placeholder=""/>
               <span class="input-group-btn">
                 <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" ng-if="otherPasswords !== undefined" aria-haspopup="true" aria-expanded="false">
                   <span class="caret"></span><span class="sr-only">Toggle Dropdown</span>
@@ -32,7 +32,7 @@
           <button type="button" class="btn btn-danger" ng-click="changeAction('delete')">Delete</button>
           </span>
             <div class="input-group col-xs-12">
-              <textarea readonly="" rows="4" class="form-control toggle-type" id="currentScript" ng-model="current.password" placeholder="" ></textarea>
+              <textarea readonly="" rows="4" class="form-control toggle-type" ng-model="current.password" placeholder="" ></textarea>
             </div>
           </div>
         </div>
@@ -43,20 +43,19 @@
         </h4>
       </div>
       <div class="actions" ng-if="action === 'change'">
-        <div class="btn-group " id="password-actions" role="group">
+        <div class="btn-group" role="group">
           <a  ng-class="formType === 'withHashes' ? 'active' : '' " ng-click="passwordForm('withHashes')" class="btn btn-default">Enter password + hash</a>
-          <a  ng-class="formType === 'preHashed' ? 'active' : '' " ng-click="passwordForm('preHashed')"  class="btn btn-default">Enter pre-hashed value</a>
-          <a  ng-class="formType === 'clearText' ? 'active' : '' " ng-click="passwordForm('clearText')"  class="btn btn-default">Use clear text password</a>
-          <a  ng-class="formType === 'script' ? 'active' : '' " ng-click="passwordForm('script')" ng-if="scriptEnabled" class="btn btn-default">Enter script to set passwords</a>
+          <a  ng-class="formType === 'preHashed'  ? 'active' : '' " ng-click="passwordForm('preHashed') " class="btn btn-default">Enter pre-hashed value</a>
+          <a  ng-class="formType === 'clearText'  ? 'active' : '' " ng-click="passwordForm('clearText') " class="btn btn-default">Use clear text password</a>
+          <a  ng-class="formType === 'script'     ? 'active' : '' " ng-click="passwordForm('script')    " class="btn btn-default" ng-if="scriptEnabled">Enter script to set passwords</a>
        </div>
-
       <div  class=" bloc-action" ng-if="formType === 'withHashes'">
         <div class="">
           <div class="form-group has-feedback">
             <label for="passwordHash-{{newPassword.show ? 'clear': 'hidden'}}" class=" control-label">New password</label>
             <div class="input-group col-xs-12">
-              <input ng-if="newPassword.show" type="text" class="form-control toggle-type animate-show" id="passwordHash-clear" ng-model="newPassword.password" placeholder=""/>
-              <input ng-hide="newPassword.show" type="password" class="form-control toggle-type animate-show" id="passwordHash-hidden" ng-model="newPassword.password" placeholder=""/>
+              <input ng-if="newPassword.show" type="text" class="form-control toggle-type animate-show" ng-model="newPassword.password" placeholder=""/>
+              <input ng-hide="newPassword.show" type="password" class="form-control toggle-type animate-show" ng-model="newPassword.password" placeholder=""/>
               <span class="input-group-btn">
                 <button type="button" ng-click="newPassword.show = ! newPassword.show" class="btn btn-default reveal-password">
                   <span ng-class="newPassword.show ? 'glyphicon-eye-close' : 'glyphicon-eye-open'" class="glyphicon "></span>
@@ -65,11 +64,11 @@
             </div>
           </div>
           <div class="form-group ">
-            <label for="hashAlgo" class=" control-label">Hash algorithm</label>
+            <label class=" control-label">Hash algorithm</label>
             <div class="col-xs-12">
-              <select id="hashAlgo" class="form-control" ng-model="newPassword.hash" ng-options="prefix as hash for (prefix, hash) in hashes">
+              <select class="form-control" ng-model="newPassword.hash" ng-options="prefix as hash for (prefix, hash) in hashes">
               </select>
-               <span id="passwordHashHelp" class="help-block">
+               <span class="help-block">
                  This password will be hashed using the <strong>{{hashes[newPassword.hash]}}</strong> algorithm and stored and distributed only as a hash.
                  The plain text value entered above will not be stored.
                </span>
@@ -83,8 +82,8 @@
             <label for="passwordHash{{formType === 'preHashed' ? '' : newPassword.show ? '-clear': '-hidden'}}" class=" control-label">New password</label>
            <div class="input-group col-xs-12" ng-if=" formType === 'clearText'">
 
-              <input ng-if="newPassword.show" type="text" class="form-control toggle-type animate-show" id="passwordHash-clear" ng-model="newPassword.password" placeholder=""/>
-              <input ng-hide="newPassword.show" type="password" class="form-control toggle-type animate-show" id="passwordHash-hidden" ng-model="newPassword.password" placeholder=""/>
+              <input ng-if="newPassword.show" type="text" class="form-control toggle-type animate-show" ng-model="newPassword.password" placeholder=""/>
+              <input ng-hide="newPassword.show" type="password" class="form-control toggle-type animate-show"  ng-model="newPassword.password" placeholder=""/>
               <span class="input-group-btn">
                 <button type="button" ng-click="newPassword.show = ! newPassword.show" class="btn btn-default reveal-password">
                   <span ng-class="newPassword.show ? 'glyphicon-eye-close' : 'glyphicon-eye-open'" class="glyphicon "></span>
@@ -92,7 +91,7 @@
               </span>
             </div>
            <div class="col-xs-12" ng-if=" formType === 'preHashed'">
-              <input type="text" class="form-control toggle-type" id="passwordHash" ng-model="newPassword.password" placeholder=""/>
+              <input type="text" class="form-control toggle-type" ng-model="newPassword.password" placeholder=""/>
             </div>
             <span class=" help-block col-xs-12">
                This <strong class="variation">{{formType === 'preHashed' ? "hash" : "password"}}</strong> will be stored and distributed verbatim (plain text).
@@ -100,13 +99,13 @@
           </div>
         </div>
       </div>
-      <div id="bloc-action-3" class=" panel bloc-action" ng-if="formType === 'script'">
+      <div class=" panel bloc-action" ng-if="formType === 'script'">
         <div class="">
           <div class="form-group has-feedback">
             <label for="script" class=" control-label">Script</label>
            <div class="input-group col-xs-12 ">
-              <textarea class="form-control" ng-model="newPassword.password" rows="4" id="script"></textarea>
-              <span id="passwordHashHelp" class="help-block">
+              <textarea class="form-control" ng-model="newPassword.password" rows="4"></textarea>
+              <span class="help-block">
                You can enter a JavaScript expression here. See <a href="/rudder-doc/_javascript_evaluation_in_directives.html">documentation</a> here for details.<br/>
                Passwords will be computed for each node during policy generation. To use hashed passwords, make sure to call the rudder.password function in the script above.
              </span>
