--- a/rudder-web/src/main/webapp/style/rudder/rudder.css
+++ b/rudder-web/src/main/webapp/style/rudder/rudder.css
@@ -2144,9 +2144,66 @@ table thead th {
   border: none !important;
 }
 
+/* REPORTS DATABASE */
 #reportFromDate, #archiveReports {
   margin-left: 7px;
+  padding: 6px 12px;
+  border: 1px solid #dcdcdc;
+  border-radius: 4px;
 }
+#modeSelector{
+  margin: 15px 8px 0 0;
+  display: inline-block;
+}
+#modeSelector > li{
+  margin-bottom:0;
+  display:inline-block;
+}
+#modeSelector > li input{
+  display:none;
+}
+#modeSelector > li > label {
+  margin-bottom: 0;
+}
+#modeSelector > li > label span{
+  margin-bottom: 0;
+  padding: 6px 12px;
+  border-radius: 4px;
+  overflow: hidden;
+  border: 1px solid #dcdcdc;
+  background-color: #f4f4f4;
+  margin:0;
+  transition-duration:.2s;
+  opacity:.7;
+  cursor:pointer;
+}
+#modeSelector > li > label span:hover{
+  opacity:1;
+}
+#modeSelector > li:first-child > label span{
+  border-top-right-radius:0;
+  border-bottom-right-radius:0;
+  border-right-color:transparent;
+}
+#modeSelector > li:last-child > label span{
+  border-top-left-radius:0;
+  border-bottom-left-radius:0;
+  border-left-color:transparent;
+}
+#modeSelector > li > label input:checked + span{
+  opacity:1;
+  cursor:default;
+  color:#fff;
+}
+#modeSelector > li:last-child > label input:checked + span{
+  background-color: #d9534f;
+  border-color: #d43f3a;
+}
+#modeSelector > li:first-child > label input:checked + span{
+  background-color: #3694d1;
+  border: 1px solid #2173a9;
+}
+/* --------------- */
 
 div.ac_results {
   width: 304px !important;
