Fixes #13835: Fix datatable headers text color

--- a/rudder-web/src/main/webapp/style/rudder/rudder-menu.css
+++ b/rudder-web/src/main/webapp/style/rudder/rudder-menu.css
@@ -2929,6 +2929,16 @@ table a > i.fa-pencil:hover{
   color:#999;
 }
 
+/* TABLE */
+.content-wrapper .dataTable{
+  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,Arial,sans-serif;
+  font-size: 14px;
+  line-height: 1.42857143;
+}
+.content-wrapper .dataTable > thead th div {
+    color: #fff;
+}
+
 @keyframes opacity-1 {
   0%   {opacity:0;visibility: visible;}
   100% {opacity:1;visibility: visible;}
